[package]
name = "ribeye"
version = "0.3.0"
edition = "2021"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/ribeye"
documentation = "https://docs.rs/ribeye"
description = """
ribeye -- a Rust library for BGP RIB data processing.
"""
keywords = ["bgp", "bgpkit", "api"]
default-run = "ribeye"

[[bin]]
name = "ribeye"
path = "src/cli/ribeye.rs"
required-features = ["cli"]

[dependencies]

### Core framework
anyhow = "1.0"
tracing = "0.1"
bgpkit-parser = "0.10.8"

### Processors
oneio = { version = "0.16.7", features = ["s3"], optional = true }
tempfile = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ipnet = { version = "2.4", optional = true }
chrono = { version = "0.4.37", optional = true }
itertools = { version = "0.12.0", optional = true }
bgpkit-broker = { version = "0.7.0-alpha.3", optional = true }

### CLI
clap = { version = "4.3", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
rayon = { version = "1.7", optional = true }
dotenvy = { version = "0.15.7", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = ["cli"]
processors = ["ipnet", "serde", "serde_json", "bgpkit-broker", "chrono", "itertools", "oneio", "tempfile"]
cli = ["processors", "clap", "tracing-subscriber", "rayon", "dotenvy"]
vendored-openssl = ["openssl"]

[dev-dependencies]
tracing-subscriber = "0.3"
